Bug 131134 - Writer: When cursor jumps to start or end of file with up/down keys, save column with pressing up/down keys again.
Summary: Writer: When cursor jumps to start or end of file with up/down keys, save col...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Canberk TURAN
URL:
Whiteboard: target:7.0.0
Keywords: skillCpp
Depends on:
Blocks:
 
Reported: 2020-03-04 20:09 UTC by Canberk TURAN
Modified: 2020-03-06 12:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Canberk TURAN 2020-03-04 20:09:08 UTC

    
Comment 1 Canberk TURAN 2020-03-04 20:14:48 UTC
I'll take this bug.
Comment 2 Canberk TURAN 2020-03-04 20:35:04 UTC
1. Go to start or end lines of file with arrow keys(Up/Down).
2. Press same arrow key again. It will make cursor jumped to start or end of that line.
3. Press again same arrow key.
4. Press opposite arrow key.

Expected Result: Cursor should move on same column of start or end of line.
Observed Result: Cursor goes to old saved column.
Comment 3 Gülşah Köse 2020-03-05 10:32:36 UTC
I can reproduce it on master after your patch (https://gerrit.libreoffice.org/c/core/+/89533) (Not a regression). Other text editors like gedit have that feature. It would be a nice improvement for us.
Comment 4 Commit Notification 2020-03-06 12:45:02 UTC
Canberk TURAN committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4c009d523f1017def872f0c69caafd7d1826c263

tdf#131134: Corrects the cursor column while moving with arrow keys.

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.