tdf#131134: Corrects the cursor column while moving with arrow keys.

After cursor jumped to start of first line or end of the last
line (with up/down arrow keys), when we clicked the arrow keys on
the same direction again, cursor movement column will be the
last or first column.

Change-Id: I9137adea14ce3fa7dd516a4e6fac5641df5a556b